# mlops-pipeline-imdb

./: README.md  README_DUMP.md  kube.yaml  pyproject.toml
.github/actions/continuous-integration/: action.yaml
.github/workflows/: continuous_integration.yaml
mlruns/0/: meta.yaml
mlruns/0/4e6f4ece334a4e3c921d761a0b56e59f/: meta.yaml
mlruns/0/4e6f4ece334a4e3c921d761a0b56e59f/metrics/: train_loss  val_loss
mlruns/0/4e6f4ece334a4e3c921d761a0b56e59f/tags/: mlflow.runName  mlflow.source.git.commit  mlflow.source.name
pipeline-app/api/: __main__.py  api.py  config.py  requirements.txt  testing.py  views.py
pipeline-app/api/schemas/: predictions.py
pipeline-training/: .gitignore  Dockerfile  Makefile  pyproject.toml  requirements.txt  requirements_dev.txt
pipeline-training/conf/: config.py  init_dirs.py  init_project.py  metadata.py
pipeline-training/data/raw/: .gitignore
pipeline-training/pipeline_training/: pipeline.py  pipeline_production.py
pipeline-training/pipeline_training/data_extraction/: __init__.py  extract.py
pipeline-training/pipeline_training/data_loading/: load.py
pipeline-training/pipeline_training/data_preparation/: resampling.py  transform.py
pipeline-training/pipeline_training/data_validation/: validate.py
pipeline-training/pipeline_training/model_evaluation/: hyperparameter_tuning.py
pipeline-training/pipeline_training/model_training/: train.py
pipeline-training/pipeline_training/model_validation/: promote.py  validate.py
pipeline-training/pipeline_training/utils/: common.py  utils_typing.py
pipeline-training/scripts/: make_venv.sh
